somehow fix test discovery